# majelis-turos-islam

./: Cargo.toml  README.md  index.html  package-lock.json  package.json
majelis-turos-islam/: Cargo.toml  build.bat  index.html  package-lock.json  package.json  serve.bat
majelis-turos-islam-api/: .gitignore  README.md  package-lock.json  package.json  wrangler.jsonc
majelis-turos-islam-api/migrations/: 001_create_articles.sql  002_create_events.sql  003_create_kajian.sql  004_create_comments.sql  005_alter_comments.sql
majelis-turos-islam-api/src/: index.ts
majelis-turos-islam-api/src/controllers/: article-controller.ts  comment-controller.ts  event-controller.ts  news-controller.ts
majelis-turos-islam-api/src/middleware/: connection.ts
majelis-turos-islam-api/src/models/: article-model.ts  comment-model.ts  event-model.ts  news-model.ts
majelis-turos-islam-api/src/services/: article-service.ts  comment-service.ts  event-service.ts  news-service.ts
majelis-turos-islam/public/: styles.scss
majelis-turos-islam/public/js/: index.js
majelis-turos-islam/public/scss/: layout.scss  variables.scss
majelis-turos-islam/src/: app.rs  lib.rs
majelis-turos-islam/src/components/: footer.rs  mod.rs  navigation.rs  section_title.rs  sholat_hour.rs
majelis-turos-islam/src/directive/: markdown.rs
majelis-turos-islam/src/layouts/: main_layout.rs
public/: styles.scss
public/scss/: layout.scss  variables.scss
src/: lib.rs  main.rs
src/components/: counter_btn.rs  footer.rs
src/layouts/: main_layout.rs
src/pages/: article.rs  home.rs  mod.rs
(+6 files in other folders)
