[package]
name = "majelis-turos-islam"
version = "0.1.0"
edition = "2021"
authors = ["Snakesystem <90812378+feri-irawansyah@users.noreply.github.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.8", features = ["csr"] }
leptos_meta = { version = "0.8" }
leptos_router = { version = "0.8" }
console_log = "1"
log = "0.4"
console_error_panic_hook = "0.1"
serde = { version = "1.0.140", features = ["derive"] }
chrono = { version = "0.4.40", features = ["serde"] }
gloo-timers = "0.3.0"
gloo-net = "0.6.0"
wasm-bindgen-futures = "0.4.50"

# utils
# strum = { version = "0.25", features = ["derive", "strum_macros"] }
# strum_macros = "0.25"


[dev-dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3"
web-sys = { version = "0.3", features = ["Document", "Window"] }


[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
